# msc-project

./: .git-commit-template  .gitignore  CMakeLists.txt  README.md  generate_ntuple.C  notebook_setup.ipynb  print_properties.cu
benchmarks/: CMakeLists.txt  histond_benchmark.C
cpu-sequential/: CMakeLists.txt  benchmark-a100.py  benchmark-das6.py  benchmark-l4.py  benchmark-local.py  benchmark.py  histond_benchmark.C  results.json  validation-das6.ipynb  validation-l4.ipynb  validation-simplified.ipynb  validation.ipynb
cpu-sequential/a100-cpu/: inner_validation  validation  validation_mt
cpu-sequential/das6-cpu/: 20231121-171013  20231123-073540  20231125-012230  20231127-223143  20231218-161515  20231219-223056  inner_validation  validation
cpu-sequential/l4-cpu/: inner_validation  validation  validation_mt
gpu-synchronous/: CMakeLists.txt  benchmark-das6.py  benchmark-l4.py  benchmark.py  pipelining.ipynb  sycl_paper.ipynb  sycl_paper_final.ipynb  validation-das6.ipynb  validation-simplified.ipynb  validation.ipynb
gpu-synchronous/das6-A100/: 20231121-140627
gpu-synchronous/das6-A100/nsys-20231121-140627/api/: CUDA_HIST-b32768-h50-fdoubles_uniform_100000000.root  CUDA_HIST-b32768-h50-fdoubles_uniform_1000000000.root  CUDA_HIST-b32768-h50-fdoubles_uniform_50000000.root  CUDA_HIST-b32768-h50-fdoubles_uniform_500000000.root  DPC++-b32768-h50-fdoubles_uniform_100000000.root  DPC++-b32768-h50-fdoubles_uniform_1000000000.root  DPC++-b32768-h50-fdoubles_uniform_50000000.root  DPC++-b32768-h50-fdoubles_uniform_500000000.root
gpu-synchronous/das6-A100/nsys-20231121-140627/memop/: CUDA_HIST-b32768-h50-fdoubles_uniform_100000000.root  CUDA_HIST-b32768-h50-fdoubles_uniform_1000000000.root  CUDA_HIST-b32768-h50-fdoubles_uniform_50000000.root  CUDA_HIST-b32768-h50-fdoubles_uniform_500000000.root
gpu-synchronous/das6-A2/: 20231121-140627
gpu-synchronous/das6-A2/nsys-20231121-140627/api/: CUDA_HIST-b32768-h50-fdoubles_uniform_100000000.root  CUDA_HIST-b32768-h50-fdoubles_uniform_1000000000.root  CUDA_HIST-b32768-h50-fdoubles_uniform_50000000.root  CUDA_HIST-b32768-h50-fdoubles_uniform_500000000.root  DPC++-b32768-h50-fdoubles_uniform_100000000.root  DPC++-b32768-h50-fdoubles_uniform_1000000000.root  DPC++-b32768-h50-fdoubles_uniform_50000000.root  DPC++-b32768-h50-fdoubles_uniform_500000000.root
gpu-synchronous/das6-A2/nsys-20231121-140627/memop/: CUDA_HIST-b32768-h50-fdoubles_uniform_100000000.root  CUDA_HIST-b32768-h50-fdoubles_uniform_1000000000.root  CUDA_HIST-b32768-h50-fdoubles_uniform_50000000.root  CUDA_HIST-b32768-h50-fdoubles_uniform_500000000.root
gpu-synchronous/das6-A4000/: 20231121-140627
gpu-synchronous/das6-A4000/nsys-20231121-140627/api/: CUDA_HIST-b32768-h50-fdoubles_uniform_100000000.root  CUDA_HIST-b32768-h50-fdoubles_uniform_1000000000.root  CUDA_HIST-b32768-h50-fdoubles_uniform_50000000.root  CUDA_HIST-b32768-h50-fdoubles_uniform_500000000.root  DPC++-b32768-h50-fdoubles_uniform_100000000.root  DPC++-b32768-h50-fdoubles_uniform_1000000000.root  DPC++-b32768-h50-fdoubles_uniform_50000000.root  DPC++-b32768-h50-fdoubles_uniform_500000000.root
gpu-synchronous/das6-A4000/nsys-20231121-140627/memop/: CUDA_HIST-b32768-h50-fdoubles_uniform_100000000.root  CUDA_HIST-b32768-h50-fdoubles_uniform_1000000000.root  CUDA_HIST-b32768-h50-fdoubles_uniform_50000000.root  CUDA_HIST-b32768-h50-fdoubles_uniform_500000000.root
gpu-synchronous/das6-A6000/: 20231121-103004
gpu-synchronous/das6-A6000/nsys-20231121-103004/api/: CUDA_HIST-b32768-h50-fdoubles_uniform_100000000.root  CUDA_HIST-b32768-h50-fdoubles_uniform_1000000000.root  CUDA_HIST-b32768-h50-fdoubles_uniform_50000000.root  CUDA_HIST-b32768-h50-fdoubles_uniform_500000000.root  DPC++-b32768-h50-fdoubles_uniform_100000000.root  DPC++-b32768-h50-fdoubles_uniform_1000000000.root  DPC++-b32768-h50-fdoubles_uniform_50000000.root  DPC++-b32768-h50-fdoubles_uniform_500000000.root
gpu-synchronous/das6-A6000/nsys-20231121-103004/memop/: CUDA_HIST-b32768-h50-fdoubles_uniform_100000000.root  CUDA_HIST-b32768-h50-fdoubles_uniform_1000000000.root  CUDA_HIST-b32768-h50-fdoubles_uniform_50000000.root  CUDA_HIST-b32768-h50-fdoubles_uniform_500000000.root
gpu-synchronous/das6-gpu/: 20231127-085724  20231206-174647  20231211-155923  final_results  reduction_range  reduction_range-diff  usm_sm75  validation
gpu-synchronous/das6-gpu/nsys-20231127-085724/: api  memop
gpu-synchronous/das6-gpu/nsys-20231129-011950/: api
gpu-synchronous/das6-gpu/nsys-20231206-174647/: api  kernel  memop
gpu-synchronous/das6-gpu/nsys-20231211-155923/: api  kernel  memop
gpu-synchronous/das6-gpu/nsys-20231211-155923/nys-20231211-155923/: api  kernel  memop
gpu-synchronous/das6-gpu/nsys-final_results/: api  kernel  memop
gpu-synchronous/das6-gpu/nsys-reduction_range/: api  kernel  memop
gpu-synchronous/das6-gpu/nsys-usm_sm75/: api  kernel  memop
gpu-synchronous/das6-gpu/nsys-validation/: memop
gpu-synchronous/das6-gpu/nys-20231127-085724/: api
gpu-synchronous/das6-gpu/nys-20231129-011950/: kernel  memop
gpu-synchronous/das6-gpu/nys-20231206-174647/: api  kernel  memop
gpu-synchronous/l4-gpu/: validation  validation-diff  validation_1-diff
gpu-synchronous/l4-gpu/nsys-validation/: memop
microbenchmarks/: CMakeLists.txt  benchmark_kernels.cuh  cachedef-das6  calibration_microbenchmarks.cu  cpu-microbenchmarks.cpp  cpu_calibration.cpp  das6_binsearch.json  gbenchmark_evaluation.cpp  gpu-microbenchmarks.cu  investigational_benchmarks.cpp  investigational_benchmarks.cu  simulate_cache.cpp  utils.h
microbenchmarks/a100/: lmbench
microbenchmarks/das6/: binsearch_cpu.json  cpu_calibration.json  cpu_microbenchmarks.json  cpu_microbenchmarks_1.json  cpu_microbenchmarks_2.json  gbenchmark_evaluation.json  gpu_calibration.json  investigational_benchmarks.json  lmbench  memtransfers.json  transformreduce_gpu.json
microbenchmarks/das6-cpu/: cpu_microbenchmarks.json
microbenchmarks/l4/: cpu_calibration.json  lmbench
